fixed slanted view on mobile

--- a/source/sass/_footer.scss
+++ b/source/sass/_footer.scss
@@ -51,15 +51,15 @@ footer {
     right: 0;
     // z-index: 0;
 }
+/*Mobile view of skweded footer*/
+@media only screen and (max-width: 540px) {
+    .site-footer {
+        height: 16em;
+    }
 
-// @media only screen and (max-width: 556px) {
-//     .site-footer.slanted-footer::before {
-//         bottom: 12.5em;
-//     }
-// }
-
-// @media only screen and (max-width: 450px) {
-//     .site-footer.slanted-footer::before {
-//         bottom: 14em;
-//     }
-// }
+	.site-footer.slanted-footer::before {
+        clip-path: polygon(100% 70%, 0% 100%, 100% 100%);
+        height: 16em;
+        bottom: 16em;
+	}
+}
